fixed a few alignment issues

--- a/scss/imports/_global.scss
+++ b/scss/imports/_global.scss
@@ -8,12 +8,7 @@
 img,object,embed { max-width: 100%; height: auto; }
 
 object,embed { height: 100%; }
-img { 
-	display: block;
-	@media screen and (min-width: $break-medium) {
-		display: inline-block; 
-	}
-	-ms-interpolation-mode: bicubic; vertical-align: middle; }
+img { -ms-interpolation-mode: bicubic; vertical-align: middle; }
 
 .clearfix:before,
 .clearfix:after { content: " ";display: table;}
